# TALON

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  FEATURES (1).md  FEATURES.md  MEMORY.md  README-install.md  README.md  TALON_andor.html  TALON_showcase.md  TALON_troopers.html  TALON_zen.html  build.py  install-linux.sh  install.bat  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  reticulum_security_review.md  setup.py  talon-client-user-guide.html  talon-client.py  talon-server-user-guide.html  talon-server.py  talon-test-network.py  talon.ini.example  talon_architecture.md
.githooks/: pre-push
.github/workflows/: build-android.yml  build-desktop.yml  build-talon-desktop-linux.yml  build-talon-desktop-windows.yml  build.yml  publish-talon-update-manifest.yml
config/: client.yaml  default.yaml  server.yaml
docs/user-guides/: talon-alpha-test-flow.html  talon-client-user-guide.html  talon-server-user-guide.html
src/: main.py
src/talon/: __init__.py  constants.py  platform.py
talon/: app.py  assets.py  audio_alerts.py  chat.py  config.py  constants.py  documents.py  location_pings.py  missions.py  operators.py  sitrep.py  waypoints.py  zones.py
talon/crypto/: fields.py  identity.py  keystore.py
talon/db/: connection.py  migrations.py  models.py
talon/network/: client_components.py  client_sync.py  framing.py  interfaces.py  links.py  node.py  protocol.py  registry.py  sync.py
talon/server/: __init__.py  audit.py  enrollment.py  net_components.py  net_handler.py  propagation.py  revocation.py
talon/services/: __init__.py  assets.py  events.py  missions.py  operators.py
talon/ui/: font_scale.py  theme.py
talon/utils/: formatting.py  logging.py  platform.py
talon_core/: __init__.py  assets.py  audio_alerts.py  chat.py  community_safety.py  config.py  constants.py  documents.py  enrollment_tokens.py  location_pings.py  map.py  missions.py  operators.py  session.py  sitrep.py  version.py  waypoints.py  zones.py
talon_core/crypto/: __init__.py  identity.py  keystore.py  passphrase.py
talon_core/db/: __init__.py  connection.py  migrations.py  models.py
talon_core/network/: __init__.py  client_components.py  client_sync.py  framing.py  i2p_identity.py  interfaces.py  links.py  node.py  protocol.py  registry.py  rns_config.py  sync.py
talon_core/server/: __init__.py  audit.py  enrollment.py  (+5 more)
talon_desktop/: __init__.py  __main__.py  app.py  asset_page.py  assets.py  chat.py  chat_page.py  community_safety.py  community_safety_page.py  document_page.py  documents.py  events.py  icons.py  log_view.py  logs.py  main.py  map_data.py  map_page.py  map_picker.py  map_scene_tiles.py  map_tiles.py  mission_icons.py  mission_page.py  missions.py  navigation.py  operator_page.py  operators.py  qt_events.py  reticulum_config_dialog.py  settings.py  sitrep_page.py  sitreps.py  theme.py  updater.py
tests/: __init__.py  conftest.py  test_app_events.py  test_attribution_flows.py  test_audio_alerts.py  test_chat.py  test_client_cache.py  test_core_session.py  test_crypto.py  test_db.py  test_desktop_shell.py  test_documents.py  test_enrollment.py  test_enrollment_flow.py  test_framing.py  test_linux_installer.py  test_map_data.py  test_migrations.py  test_missions.py  test_models.py  test_net.py  test_network_integration.py  test_operators.py  test_packaging.py  test_protocol.py  test_rate_limit.py  test_registry.py  test_reticulum_integration.py  test_revocation.py  test_rnode.py  test_server.py  test_services.py  test_sync.py  test_sync_e2e.py  test_ui_client_screens.py  test_ui_server_screens.py  test_ui_theme.py  test_ui_widgets.py  test_updater.py  test_version.py  (+1 more)
tools/: generate_enrollment.py  promote-local-docs-release.sh  shred_test.py  talon-publish-policy.sh  tile_prefetch.py
wiki/: INDEX.md  Phase_2_Network_sync.md  architecture_improvement.md  bugs.md  decisions.md  document_management.md  features.md  fixed_bugs.md  linux_release_readiness.md  map.md  mission_ui_rework.md  platform_split_checklist.md  platform_split_plan.md  sitrep_ui_rework.md  status.md
wireframes/: assignment_closeout_checkin_wireframe.html  community_safety_wireframes.html  documents_context_menu_wireframe.html  fix_batch_navigation_documents_missions_chat_wireframe.html  incident_followup_workflow_wireframe.html  map_asset_icon_preview.html  map_location_workflow_wireframes.html  mission_create_embedded_map_wireframe.html  mission_icons_routes_incident_delete_wireframe.html  nav_rail_icon_preview.html  sitrep_detail_scroll_wireframe.html  sitrep_improvements_wireframes.html  sitrep_minimal_wireframe.html  sitrep_popup_followup_workflow_wireframe.html  sitrep_template_compact_wireframe.html
(+181 files in other folders)
