[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "talon"
version = "0.1.0"
description = "T.A.L.O.N. — Tactical Awareness & Linked Operations Network"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "cudanet"}]

dependencies = [
    # Reticulum Network Stack — mesh networking + identity + encryption
    "rns>=1.1.3,<2.0",
    "lxmf>=0.9.4,<1.0",

    # UI Framework
    "kivy>=2.3.0,<3.0",
    "kivymd>=1.2.0,<2.0",

    # Database — encrypted SQLite
    "sqlcipher3>=0.5.0,<1.0",

    # Cryptography
    "pynacl>=1.5.0,<2.0",
    "argon2-cffi>=23.1.0",

    # Configuration
    "pyyaml>=6.0",

    # Serial port access for RNode LoRa hardware
    "pyserial>=3.5,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
    "buildozer>=1.5",
]
map = [
    "mapview>=1.0.6",
]

[project.scripts]
talon-server = "talon.server.cli:main"
talon-client = "talon.client.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
talon = [
    "ui/kv/*.kv",
    "ui/server/kv/*.kv",
]

[tool.setuptools.data-files]
"share/talon/config" = [
    "config/default.yaml",
    "config/client.yaml",
    "config/server.yaml",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
