[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talon"
version = "0.1.0"
description = "Tactical Awareness & Linked Operations Network"
requires-python = ">=3.10"
dependencies = [
    # [base] skips audio/video extras that fail to build on Android
    "kivy[base]>=2.3.1",
    # KivyMD 2.x is NOT on PyPI — must be installed from GitHub dev branch:
    #   pip install git+https://github.com/kivymd/KivyMD.git
    # The >=2.0.0 floor guards against accidentally running with the stable 1.x release.
    "kivymd>=2.0.0",
    "rns>=1.1.3",
    "argon2-cffi>=25.1.0",
    "PyNaCl>=1.5.0",
    "sqlcipher3>=0.6.0",
    # Tile map widget — OSM / Satellite / Topo. Android Phase 4: needs p4a recipe.
    "mapview>=1.0.6",
    # Document security — MIME magic-byte detection and image re-encoding.
    # python-magic requires the system library: apt install libmagic1
    # Both degrade gracefully if absent (extension-only MIME / no EXIF strip).
    # Android Phase 4: python-magic needs a custom p4a recipe; Pillow has one.
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
# Development tools — never installed on Android or in CI build containers
dev = [
    "pytest>=9.0",
    "pytest-cov",
    "pytest-mock",
]
# Desktop packaging — NEVER add pyinstaller to core dependencies
# as it will break Buildozer's Android build container
desktop = [
    "pyinstaller>=6.19",
]

[project.scripts]
talon = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["talon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
