[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talon"
version = "0.1.0"
description = "Tactical Awareness & Linked Operations Network"
requires-python = ">=3.10"
dependencies = [
    "rns>=1.1.3",
    "argon2-cffi>=25.1.0",
    "PyNaCl>=1.5.0",
    "sqlcipher3>=0.6.0",
    # Document security — MIME magic-byte detection and image re-encoding.
    # python-magic requires the system library: apt install libmagic1
    # Windows uses extension-based MIME fallback; python-magic can crash while
    # loading libmagic there.
    # Both degrade gracefully if absent (extension-only MIME / no EXIF strip).
    # Android Phase 4: python-magic needs a custom p4a recipe; Pillow has one.
    "python-magic>=0.4.27; platform_system != 'Windows'",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
# Development tools — never installed on Android or in CI build containers
dev = [
    "pytest>=9.0",
    "pytest-cov",
    "pytest-mock",
]
# Desktop packaging — NEVER add pyinstaller to core dependencies
# as it will break Buildozer's Android build container
desktop = [
    "PySide6>=6.7",
    "pyinstaller>=6.19",
]

[project.scripts]
talon = "main:main"
talon-desktop = "talon_desktop.main:main"

[tool.hatch.build.targets.wheel]
packages = ["talon", "talon_core", "talon_desktop"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
